--- a/asstes/style/style.scss
+++ b/asstes/style/style.scss
@@ -70,6 +70,9 @@ body {
                     background-color: rgba($color: $success, $alpha: 0.1);
                 }
 
+                &.no-notes {
+                    text-align: center;
+                }
 
                 td {
                     padding: 12px;
